Fixed jump button

--- a/TheBorderlessSource.raw.css
+++ b/TheBorderlessSource.raw.css
@@ -684,8 +684,6 @@ html .buttonInvertedPurple-WtBglX { color: #fff; }
 .appMount-3VJmYg { background-color: #1e2124; }
 div[class="scroller-2FKFPG scroller-2v3d_F"] div[style*="width: 100%;"]:last-of-type  { height: 400px !important; }
 div[class="scroller-2FKFPG scroller-2v3d_F scrolling-CehiO2"] div[style*="width: 100%;"]:last-of-type { height: 400px !important; }
-div[class="scroller-2FKFPG members-1998pB"] div[style*="width: 100%;"]:last-of-type  { height: 600px !important; }
-div[class="scroller-2FKFPG members-1998pB scrolling-CehiO2"] div[style*="width: 100%;"]:last-of-type { height: 600px !important; }
 .channels-Ie2l6A .scroller-2v3d_F { height: 112vh; }
 .scroller-2FKFPG::-webkit-scrollbar { width: 0px !important; height: 0 !important; }
 .attachButton-1UjEWA { margin: 0; padding: 13px 0 13px 10px; }
@@ -751,3 +749,4 @@ div[class="input-cIJ7To size16-14cGz5 flexCenter-3_1bcw flex-1O1GKY justifyCente
 div[class="messagesPopoutWrap-1MQ1bW themedPopout-25DgLi"] { margin-right: -236px; }
 div[class="messagesPopoutWrap-1MQ1bW themedPopout-25DgLi recentMentionsPopout-2fmau1"] { margin-right: 97px; }
 .theme-dark .everyonePopout-nEbJY3 { box-shadow: none; border-radius: 0; top: 2px; right: -6px; position: relative; }
+.theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .message-group:hover .actionButtons-1sUUug { box-shadow: none; background-color: transparent; }
